--- a/active_radar/CMakeLists.txt
+++ b/active_radar/CMakeLists.txt
@@ -16,11 +16,10 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+  FILES
+  RangeWithCovarianceIdentified.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -37,10 +36,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+  DEPENDENCIES
+  std_msgs sensor_msgs
+)
 
 ###########
 ## Build ##
@@ -52,8 +51,9 @@ set(Eigen_INCLUDE_DIRS ${EIGEN3_INCLUDE_DIRS})
 set(Eigen_LIBRARIES ${Eigen_LIBRARIES})
 
 catkin_package(
-  CATKIN_DEPENDS message_runtime mrs_lib # roscpp rospy std_msgs
+  CATKIN_DEPENDS message_runtime mrs_lib roscpp std_msgs sensor_msgs nodelet
 )
+
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
@@ -64,9 +64,11 @@ include_directories(
 )
 
 ## Declare a C++ library
-add_library(${PROJECT_NAME}
+add_library(${PROJECT_NAME} SHARED
   src/active_radar.cpp
+  src/ranging_client.cpp
 )
+
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
