--- a/active_radar/package.xml
+++ b/active_radar/package.xml
@@ -13,6 +13,7 @@
   <depend>roscpp</depend>
   <depend>mrs_lib</depend>
   <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>message_runtime</depend>
   <depend>nodelet</depend>
 
